product doctor page api

--- a/src/Pages/Product/Product.css
+++ b/src/Pages/Product/Product.css
@@ -9,7 +9,8 @@
   width: 90%;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin: auto;
+  /* margin: auto; */
+  /* margin: 30px; */
 }
 
 .product-right {
