--- a/src/Pages/Product/Product.css
+++ b/src/Pages/Product/Product.css
@@ -9,8 +9,7 @@
   width: 90%;
   justify-content: space-between;
   flex-wrap: wrap;
-  /* margin: auto; */
-  /* margin: 30px; */
+  margin: auto;
 }
 
 .product-right {
