--- a/src/Components/doctorCard.js/DoctorCard.css
+++ b/src/Components/doctorCard.js/DoctorCard.css
@@ -1,117 +1,35 @@
-.doctor-card{
+.doctor-page{
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  padding: 0.5rem;
-  /* margin: 1rem; */
-  width: 48%;
-  padding: 10px;
+  padding: 0.6rem;
+  margin: 3rem 1rem;
+  width: 280px;
 }
 
-/* .doctor-cardDecs
-{
-  display: flex;
-} */
-
-.doctor-card img{
-  height: 100%;
-  object-fit: cover;
-  width: 95%;
+.doctor-page img{
+  height: 20rem;
+  object-fit: contain;
+  width: 100%;
   margin-bottom: 1rem;
-  border-radius: 50%;
 }
 
-.doctor-card h5{
+.doctor-page h5{
   font-size: 1.9rem;
   margin-bottom: 0.7rem;
 }
 
 
-.doctor-card p{
+.doctor-page p{
   font-size: 1.4rem;
   margin-bottom: 0.7rem;
 }
 
-.doctor-card button:first-child {
+.doctor-page button {
   font-size: 1.5rem;
-  width: 36%;
-}
-.doctor-card button:last-child {
-  font-size: 1.5rem;
-  width: 63%;
+  /* width: 60%; */
+  /* margin: 1rem 1rem; */
+  margin-top: 0.5rem;
 }
 
-.doctor-card button span{
+.doctor-page button span{
   margin-right: 0.5rem;
-}
-.btnDoc{
-  display: flex;
-  justify-content: space-between;
-}
-
-
-.detailsDoctor {
-  display: flex;
-  align-items: center;
-}
-
-.detailsDoctor i {
-  color: var(--btn-color);
-  font-size: 1.3rem;
-}
-
-
-.detailsDoctor h5, .detailsDoctor p{
-  margin-left: 5px;
-}
-
-.doctorSchedule{
-  display: flex;
-}
-
-.doctorScheduleLeft {
-  flex: 1;
-}
-.doctorScheduleRight {
-  flex: 2;
-  background-color: rgb(245,244,244) ;
-  border-radius: 5px;
-}
-
-.detailsFlex{
-  display: flex;
-  /* align-items: center; */
-  justify-content: space-between;
-  width: 100%;
-  position: relative;
-}
-
-.doctorCardStar{
-  position: absolute;
-  right: 0;
-  font-size: 3rem;
-}
-
-.table td button {
-  outline: none;
-  background-color: rgb(119,118,118);
-  width: 100%;
-  margin: 2px;
-  border: 1px solid rgb(119,118,118);
-  color: white;
-  border-radius: 3px;
-  font-size: 1.4rem;
-  flex: 1;
-}
-
-.table td button:hover{
-  background-color: rgba(119, 118, 118, 0.728);
-  border: 1px solid rgba(119, 118, 118, 0.728);
-
-}
-
-thead th {
-  font-size: 1.6rem;
-}
-
-tbody th {
-  font-size: 1.3rem;
 }
