--- a/src/Components/doctorCard.js/DoctorCard.css
+++ b/src/Components/doctorCard.js/DoctorCard.css
@@ -1,8 +1,8 @@
 .doctor-page{
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   padding: 0.6rem;
-  margin: 3rem 1rem;
-  width: 280px;
+  margin: 20px 30px 20px 0;
+  width: 250px;
 }
 
 .doctor-page img{
