--- a/src/Components/productCard/ProductCard.css
+++ b/src/Components/productCard/ProductCard.css
@@ -2,7 +2,7 @@
   width: 25rem;
   height: 32rem;
   border: 1px solid lightgray;
-  margin: 20px 0 20px 0;
+  margin: 20px 30px 20px 0;
   border-radius: 1rem;
   overflow: hidden;
 }
@@ -14,7 +14,7 @@
 .productCard img{
   width: 100%;
   height: 50%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .productCard .info {
